# spotify-wrapped

./: .gitignore  README.md  Spotify_Super_Wrapped.py  config.py  dashboard.py  database.py  pyproject.toml
.streamlit/: config.toml
app/: Home.py
app/pages/: 1_Range_Selection.py  2_Year_Analysis.py  2_year_template.py
notebooks/: 20250117-data_exploration.ipynb
pages/: 1_Range_Selection.py  2_year_template.py
src/utils/: api_calls.py
