[project]
name = "spotify-wrapped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autorootcwd>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
